@@ -804,7 +804,7 @@ class Test(BaseTest):
         # Wait until states are removed from prospectors
         self.wait_until(
             lambda: self.log_contains(
-                "Cleanup state for file as file removed"),
+                "Remove state for file as file removed"),
             max_timeout=15)
 
         # Add one more line to make sure registry is written
