@@ -64,5 +64,5 @@ create-metricset:
 
 # Generates the data.json example documents
 .PHONY: generate-json
-generate-json:
+generate-json: build-image
 	 ${DOCKER_COMPOSE} run beat go test -tags=integration github.com/elastic/beats/metricbeat/module/... -data
